<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HospitalRegistration</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="lastName">LastName</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="Gender">Gender</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="DOB">DOB</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="Add">Add</string>
    <string name="country">Country</string>
    <string name="Diabetes">Diabetes</string>
    <string name="BP">BloodPressure</string>
    <string name="Thyroid">Thyroid</string>
    <string name="MajorDieses">Major Dieses</string>
	<string name="Update">Update</string>
	<string name="Delete">Delete</string>
	<string name="Display">Display</string>
	<string name="Search">Search</string>
	<string name="LoadData">Load Data</string>
    <color name="green">#7DB860</color>
    <color name="blue">#3333FF</color>
    <color name="darkgreen">#FF669900</color>
    <color name="transparent">#00FFFFFF</color>

    <string name="bloodGroup">BloodGroup</string>
    <string name="Password">Password</string>
    <string name="Copassword">Confirm password</string>
    <string name="alertusername">Username can not be blank</string>
    <string name="alertlastname">Lastname can not be blank</string>
    <string name="alertphone">Contact Number can not be blank</string>
    <string name="alertemail">EmailId can not be blank</string>
    <string name="alertbloodgroup">Bloodgroup can not be blank</string>
    <string name="alertDOB">Date of birth can not be blank</string>
    <string name="alertpassword">password can not be blank</string>
    <string name="alertcopassword">Confirm password can not be blank</string>
    <string name="fooText">All Rights Reserved</string>

</resources>